--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <p>Qui aperiam tempora magnam delectus. Totam, velit? Odio ea corporis provident voluptatem delectus amet aliquid id, assumenda similique consequatur! Placeat, vel ab consequatur rerum illo est aut saepe nisi maiores.</p>
 
 </main>
+<footer>Patička 2021</footer>
   
 
 </body>
